# llm-playground

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pylintrc  .stignore  QUESTIONS.md  Taskfile.dist.yaml  pyproject.toml
contrib/paperspace/: Dockerfile
contrib/tasks/ai/: Taskfile.yaml
contrib/tasks/pre-commit/: Taskfile.yaml
contrib/tasks/python/: Taskfile.yaml
contrib/tasks/utils/: Taskfile.yaml
notebooks/fine-tuning-embedding-models/: .gitignore  Fine_tuning_Embedding_Models_for_RAG_Assignment_Notebook.ipynb  README.md  poetry.toml  pyproject.toml
notebooks/langchain-intro/: langchain_intro.ipynb  pyproject.toml
notebooks/langchain-intro/docs/: generic-document-splitting-approaches.md  langchain-expression-language-lcel.md  langchain-text-splitters.md
notebooks/langgraph-intro/: introduction_to_lang_graph.ipynb  pyproject.toml
notebooks/langgraph-multi-agent/: .gitignore  README.md  multi_agent_rag_langgraph.ipynb  pyproject.toml
notebooks/langsmith-intro/: .gitignore  langsmith_intro.ipynb  pyproject.toml
notebooks/pythonic_rag/: .gitignore  Pythonic_RAG_Assignment.ipynb  pyproject.toml
notebooks/pythonic_rag/aimakerspace/openai_utils/: chatmodel.py
notebooks/pythonic_rag/data/: well-defined-human-reasoning-approaches.md
