[tool.poetry]
name = "llm-playground"
version = "0.1.0"
description = "LLM-Playground"
authors = ["da-moon <contact@havi.dev>"]
# packages = [
#        { include = "app" },
#    ]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

pex = "^2.16.1"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
bcrypt = "^4.2.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pex = "^2.16.1"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
bump-pydantic = "^0.8.0"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
