[tool.poetry]
name = "langchain-intro"
version = "0.1.0"
description = "Langchain introduction"
authors = ["da-moon <contact@havi.dev>"]
package-mode = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
qdrant-client = "^1.11.1"
langchain = "^0.2.14"
langchain-core = "^0.2.35"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.22"
tiktoken = "^0.7.0"
pymupdf = "^1.24.9"
getpass4 = "^0.0.14.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"



[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
