[tool.poetry]
name = "langsmith-intro"
version = "0.1.0"
description = "Langsmit introduction"
authors = ["da-moon <contact@havi.dev>"]
package-mode = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain-core = "^0.2.35"
langchain-openai = "^0.1.22"
langchain-community = "^0.2.12"
langchain-qdrant = "^0.1.3"
qdrant-client = "^1.11.1"
langsmith = "^0.1.104"
openai = "^1.42.0"
tiktoken = "^0.7.0"
cohere = "^5.8.1"
lxml = "^5.3.0"
nest-asyncio = "^1.6.0"
getpass4 = "^0.0.14.1"
grandalf = "^0.8"
uuid = "^1.30"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"



[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
