[tool.poetry]
name = "pythonic-rag"
version = "0.1.0"
description = "Pythonic Rag Notebook"
authors = ["da-moon <contact@havi.dev>"]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.0.1"
openai = "^1.41.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
plotly = "^5.23.0"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
sourcery = "^1.22.0"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.scripts]
start = "poetry run jupyter notebook"
